H3CIPMSJAVA-20180830/src/objects/CtiTel__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>400,SOHO,办事处,大客户</description>
    <fields>
        <fullName>engineer__c</fullName>
        <description>工程师电话</description>
        <label>Engineer Tel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>h3c__c</fullName>
        <description>H3C 400</description>
        <label>H3C 400</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soho__c</fullName>
        <description>SOHO</description>
        <label>SOHO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vip__c</fullName>
        <description>大客户电话</description>
        <label>VIP Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Cti Tel</label>
</CustomObject>